[package]
name = "discv5-dual-stack"
version = "0.1.0"
edition = "2021"

[dependencies]
discv5 = "0.8.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
rand_xorshift = "0.3"
redis = { version = "0.27", features = ["tokio-comp"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }